@@ -145,6 +145,8 @@ public class CayenneModelerFrame extends JFrame implements DataNodeDisplayListen
      */
     protected WelcomeScreen welcomeScreen;
 
+    public int selectedTaxIndex = 0;
+    
     public CayenneModelerFrame(ActionManager actionManager) {
         super(ModelerConstants.TITLE);
         this.actionManager = actionManager;
